Change read-only parameter class to record. (#141)
Fix level of @Async to avoid exception swallows.
Do not deactivate parent endpoint in case the VCU is removed.